--- a/frap_book.tex
+++ b/frap_book.tex
@@ -424,7 +424,7 @@ For example, recall that our definition of expression size included this clause.
 \end{eqnarray*}
 Now imagine that we are trying to prove this formula.
 $$\size{\mathsf{Plus}(e, \mathsf{Const}(7))} = 2 + \size{e}$$
-We may apply the defining equation to rewrite into a different formula, where we have essential pushed the definition of $\size{\cdot}$ through the $\mathsf{Plus}$.
+We may apply the defining equation to rewrite into a different formula, where we have essentially pushed the definition of $\size{\cdot}$ through the $\mathsf{Plus}$.
 $$1 + \size{e} + \size{\mathsf{Const}(7)} = 2 + \size{e}$$
 Another application of a different defining equation, this time for $\mathsf{Const}$, takes us to here.
 $$1 + \size{e} + 1 = 2 + \size{e}$$
